RESOLVED FIXED 225294
[OpenSSL] Implement CryptoAlgorithmRSA*
https://bugs.webkit.org/show_bug.cgi?id=225294
Summary [OpenSSL] Implement CryptoAlgorithmRSA*
Yoshiaki Jitsukawa
Reported 2021-05-03 02:10:45 PDT
Implement CryptoAlgorithmRSA_OAEP for OpenSSL along with CryptoKeyRSA.
Attachments
Patch (41.78 KB, patch)
2021-05-03 03:50 PDT, Yoshiaki Jitsukawa
no flags
Patch (91.64 KB, patch)
2021-05-05 05:58 PDT, Yoshiaki Jitsukawa
no flags
Patch (91.34 KB, patch)
2021-05-06 04:50 PDT, Yoshiaki Jitsukawa
no flags
Yoshiaki Jitsukawa
Comment 1 2021-05-03 03:50:59 PDT
Yoshiaki Jitsukawa
Comment 2 2021-05-04 05:29:05 PDT
Comment on attachment 427550 [details] Patch Taking down the first patch to add some more RSA implementation.
Yoshiaki Jitsukawa
Comment 3 2021-05-05 05:58:40 PDT
Christopher Reid
Comment 4 2021-05-05 17:16:07 PDT
Comment on attachment 427762 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=427762&action=review Just have an informal comment > Source/WebCore/crypto/openssl/CryptoAlgorithmRSAES_PKCS1_v1_5OpenSSL.cpp:38 > + RELEASE_ASSERT_WITH_SECURITY_IMPLICATION(!(key.keySizeInBits() % 8)); Are these RELEASE_ASSERT_WITH_SECURITY_IMPLICATION checks needed? It looks like keySizeInBits returns either 0 or a multiple of 8 from getRSAModulusLength.
Yoshiaki Jitsukawa
Comment 5 2021-05-05 18:05:31 PDT
> Are these RELEASE_ASSERT_WITH_SECURITY_IMPLICATION checks needed? It looks like keySizeInBits returns either 0 or a multiple of 8 from getRSAModulusLength. Nope, not really needed. I'll remove these.
Yoshiaki Jitsukawa
Comment 6 2021-05-06 04:50:47 PDT
Yoshiaki Jitsukawa
Comment 7 2021-05-06 04:53:42 PDT
(In reply to Yoshiaki Jitsukawa from comment #6) > Created attachment 427871 [details] > Patch Removed RELEASE_ASSERT_WITH_SECURITY_IMPLICATION(!(key.keySizeInBits() % 8)).
EWS
Comment 8 2021-05-06 17:17:13 PDT
Committed r277142 (237429@main): <https://commits.webkit.org/237429@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 427871 [details].
Radar WebKit Bug Importer
Comment 9 2021-05-06 17:18:38 PDT
Fujii Hironori
Comment 10 2021-05-09 13:23:05 PDT
Filed: Bug 225581 – [WinCairo][Clang] lld-link: error: undefined symbol: public: static class GenericTypedArrayView<> in CryptoKeyRSAOpenSSL.cpp
Yoshiaki Jitsukawa
Comment 11 2021-07-07 16:04:51 PDT
*** Bug 206635 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.